--- a/helm/go-web-app-chart/values.yaml
+++ b/helm/go-web-app-chart/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: aakash6012/go-lang-app
   pullPolicy: Always
-  tag: latest  # You can change this to "latest" if needed
+  tag: "16932094178"
 
 ingress:
   enabled: false
