--- a/helm/go-web-app-chart/templates/deployment.yaml
+++ b/helm/go-web-app-chart/templates/deployment.yaml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
       - name: go-web-app
-        image: aakash6012/go-lang-app:{{ .Values.image.tag }}
+        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         ports:
         - containerPort: 8080
